--- a/mSystems/rev2/mSys_intro_rev2.tex
+++ b/mSystems/rev2/mSys_intro_rev2.tex
@@ -1,7 +1,8 @@
-The desire to understand the factors that influence human health and cause disease has always been one of the major driving forces of biological research. As evidence of the new "holobiont"  and "hologenome" concepts is increasing each day \cite{holo1, holo2}, research not only focuses on the human physiology but also on the microbial population that surrounds us. However, these concepts are still under debate \cite{holo3}. The human microbiome is intimately linked to our physiology with the metabolism of bile acids \cite{bileacids}, of choline \cite{choline} and key metabolites like short-chain fatty acids \cite{scfa1, scfa2} which are also involved in immune system maturation \cite{scfa3, scfa4}. Human microbiota has been suggested to be closely related to diseases like type 2 diabetes \cite{diabetes2}, cardiovascular disease (CVD) \cite{CVD}, irritable bowel syndrome \cite{IBS}, Crohn's disease \cite{CD}, some afflictions like obesity \cite{ob1, ob2} and malnutrition \cite{nutr} as well as many other diseases \cite{Moya_trends}. Recent studies have revealed that microbes also influence brain function and behaviour and are related to neurological disorders like Alzheimer's disease through the gut-brain axis\cite{mind,AD}. Even a difficult to diagnose condition like chronic fatigue syndrome, which in the past had often been suggested to be a psychosomatic disease, has recently been associated with reduced diversity and altered composition of the gut microbiome\cite{CFS}.
+% !TeX root = ./mSys_MAIN_rev2.tex
+The quest to understand the factors that influence human health and cause disease has always been one of the major driving forces of biological research. With growing evidence of the new "holobiont"  and "hologenome" concepts \cite{holo1, holo2}, research not only focuses on the human physiology but also on the associated microbial population, although these concepts are still under debate \cite{holo3}. Research has revealed that the human microbiome is intimately linked to our physiology through the metabolism of bile acids \cite{bileacids}, of choline \cite{choline} and key metabolites like short-chain fatty acids \cite{scfa1, scfa2}, which are also involved in immune system maturation \cite{scfa3, scfa4}. Human microbiota is plausibly related to diseases such as type 2 diabetes \cite{diabetes2}, cardiovascular disease (CVD) \cite{CVD}, irritable bowel syndrome \cite{IBS}, Crohn's disease \cite{CD}, some afflictions like obesity \cite{ob1, ob2} and malnutrition \cite{nutr}, as well as many other diseases \cite{Moya_trends}. Recent studies have revealed that microbes also influence brain function and behaviour and are related to neurological disorders like Alzheimer's disease through the gut-brain axis\cite{mind,AD}. Recently, chronic fatigue syndrome, a subtle condition often cited as a psychosomatic disease, has been associated with a reduced diversity and altered composition of the gut microbiome\cite{CFS}.
 
-High throughput methods for microbial 16S ribosomal RNA gene and SMS (shotgun metagenomic sequencing) have now begun to reveal the composition of archaeal, bacterial, fungal and viral communities located both, in and on the human body. Modern high-throughput sequencing and bioinformatics tools provide a powerful means of understanding how the human microbiome contributes to health and its potential as a target for therapeutic interventions \cite{microb&health}. To define normal host-gut microbe interactions and how microbiota compositional changes can cause some diseases are important issues that still require scientific answers \cite{normal1, normal2, panthropology}.
+This research area has progressed greatly thanks to high-throughput methods for microbial 16S ribosomal RNA gene and SMS (shotgun metagenomic sequencing), which reveal the composition of archaeal, bacterial, fungal and viral communities located in and on the human body. Modern high-throughput sequencing and bioinformatics tools provide a powerful means of understanding how the human microbiome contributes to health and its potential as a target for therapeutic interventions \cite{microb&health}. Research is underway to establish normal host-gut microbe interactions and understand how microbiota compositional changes can cause certain diseases  \cite{normal1, normal2, panthropology}.
 
-Biology has recently acquired new technological and conceptual tools to investigate, model and understand living organisms at system level, thanks to spectacular progress in quantitative techniques, large-scale measurement methods and the integration of experimental and computational approaches. In particular, Systems Biology has made great efforts to reveal the general laws governing the complex behaviour of microbial communities \cite{sysbio&microb, msys1, metasysbio}, including a proposal suggesting they have universal dynamics \cite{uni_dynam}. Microbiota can be approached under the light of ecological theory which includes general principles like Taylor's law \cite{pretaylor,taylor} that relates the spatial or temporal variability of the population with its mean. This law, also known as fluctuation scale law, is ubiquitous in the natural world and can be found in several systems like random walks \cite{randomwalks}, stock markets \cite{economics1, economics2}, tree \cite{cohen_taylor} and animal populations \cite{taylor, animal1, animal2}, gene expression \cite{genexpress}, and the human genome \cite{genome}. Taylor's law has been applied to microbiota in a spatial way in the work of Zhang {\it et al.}, (2014) \cite{isme1}, where they show that this population tends to be an aggregated one rather than having a random distribution. Despite its ubiquity, it has only been studied in experimental settings \cite{cohen_bac, ramslayer} but has never been applied in follow-up studies on microbiota, even though major efforts have been made to infer the community structure from a dynamic point of view \cite{cobas, schloss, ravel}  
+Biology has recently acquired new technological and conceptual tools to investigate, model and understand living organisms at a systems level, thanks to progress in quantitative techniques, large-scale measurement methods and joint experimental and computational approaches. In particular, Systems Biology strives to reveal the general laws governing the complex behavior of microbial communities \cite{sysbio&microb, msys1, metasysbio}, including a proposal for universal dynamics \cite{uni_dynam}. Microbiota can be approached in the light of ecological theory, which includes general principles like Taylor’s law \cite{pretaylor,taylor} relating the spatial or temporal variability of the population with its mean. This law, also known as fluctuation scale law, is ubiquitous in the natural world and can be found in several systems such as random walks \cite{randomwalks}, stock markets \cite{economics1, economics2}, tree \cite{cohen_taylor} and animal populations \cite{taylor, animal1, animal2}, gene expression \cite{genexpress}, and the human genome \cite{genome}. Taylor's law has been applied to microbiota spatially by Zhang {\it et al.}, (2014) \cite{isme1}, with results showing that this population tends to be an aggregated one rather than having a random distribution. Despite its ubiquity, this law has only been tested in experimental settings \cite{cohen_bac, ramslayer} but has never been applied in follow-up studies on microbiota, despite major efforts to infer the community structure from a dynamic point of view \cite{cobas, schloss, ravel}  
 
-This paper presents the imprints of health status (healthy or disease) in the macroscopic properties of microbiota, by studying its temporal variability. We analyzed more than 40000 time series of taxa from the gut microbiome of 99 individuals obtained from publicly available high throughput sequencing data about different conditions: diseases, diets, trips, obese status, antibiotic therapy and healthy individuals. Having seen that all the cases followed Taylor's law, we used this empirical fact to model how the relative abundances of taxa evolved over time thanks to the Langevin equation, in a similar way as the approach applied recently by Blumm {\it et al.} \cite{ranking}. We used this mathematical framework to explore the temporal stability of microbiota under different conditions in order to understand how this is related to the healthy status of the subjects.
+This paper presents the hallmarks of health status (healthy or diseased) in the macroscopic properties of microbiota, by studying its temporal variability. We analyzed over 40,000 time series of taxa from the gut microbiome of 99 subjects obtained from publicly available high-throughput sequencing data related to different conditions: diseases, diets, trips, obese status, antibiotic therapy and healthy subjects. On finding that all the cases followed Taylor’s law, we used this empirical fact to model how the relative abundances of taxa evolved over time using the Langevin equation, similarly to the approach applied by Blumm {\it et al.} \cite{ranking}. We used this mathematical framework to explore the temporal stability of microbiota under different conditions in order to understand how this is related with the health status of the subjects.
